--- a/django2/requirements.txt
+++ b/django2/requirements.txt
@@ -1,19 +1,50 @@
 asgiref==3.8.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==24.8.1
+cffi==1.17.1
+chardet==5.2.0
 common==0.1.2
+constantly==23.10.4
+cryptography==44.0.2
+daphne==4.1.2
 Django==5.1.6
 django-cors-headers==4.7.0
 django-extensions==3.2.3
 django-filter==25.1
+django-sslserver==0.22
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
+drf-spectacular==0.28.0
 future==1.0.0
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+inflection==0.5.1
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
 MarkupSafe==3.0.2
+pillow==11.1.0
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 PyJWT==2.9.0
+pyOpenSSL==25.0.0
+PyYAML==6.0.2
+referencing==0.36.2
+reportlab==4.3.1
+rpds-py==0.24.0
 serializers==0.2.4
+service-identity==24.2.0
 simplejwt==2.0.1
 sqlparse==0.5.3
+Twisted==24.11.0
+txaio==23.1.1
 typing==3.7.4.3
+typing_extensions==4.12.2
 tzdata==2025.1
+uritemplate==4.1.1
 utils==1.0.2
 Werkzeug==3.1.3
+zope.interface==7.2
