--- a/django2/requirements.txt
+++ b/django2/requirements.txt
@@ -1,9 +1,18 @@
+amqp==5.3.1
 asgiref==3.8.1
 attrs==25.3.0
 autobahn==24.4.2
 Automat==24.8.1
+billiard==4.2.1
+celery==5.5.2
+certifi==2025.4.26
 cffi==1.17.1
 chardet==5.2.0
+charset-normalizer==3.4.2
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 common==0.1.2
 constantly==23.10.4
 cryptography==44.0.2
@@ -23,28 +32,36 @@ incremental==24.7.2
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
+kombu==5.5.3
 MarkupSafe==3.0.2
 pillow==11.1.0
+prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 PyJWT==2.9.0
 pyOpenSSL==25.0.0
+python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 referencing==0.36.2
 reportlab==4.3.1
+requests==2.32.3
 rpds-py==0.24.0
 serializers==0.2.4
 service-identity==24.2.0
 simplejwt==2.0.1
+six==1.17.0
 sqlparse==0.5.3
 Twisted==24.11.0
 txaio==23.1.1
 typing==3.7.4.3
 typing_extensions==4.12.2
-tzdata==2025.1
+tzdata==2025.2
 uritemplate==4.1.1
+urllib3==2.4.0
 utils==1.0.2
+vine==5.1.0
+wcwidth==0.2.13
 Werkzeug==3.1.3
 zope.interface==7.2
